src/objects/EF_Approval__c.object
<CustomObject>
    <description>Object used to temporarily store values of records being modified on Contract or E&amp;F Airline Billing Agreement, and that need an approval.</description>
    <fields>
        <fullName>Airline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Airline</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>EF_Approval_Temp_Storages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Currency__c</fullName>
        <globalPicklist>EF_Currency</globalPicklist>
        <label>Billing Currency</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCF_Number__c</fullName>
        <label>CCF Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>EF_Approval_Temp_Storages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EF_Admin_Fee__c</fullName>
        <label>Admin Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EF_Billing_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Airline Billing Agreement</label>
        <referenceTo>EF_Billing_Agreement__c</referenceTo>
        <relationshipName>EF_Approval_Temp_Storages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EF_Billing_Currency__c</fullName>
        <globalPicklist>EF_Currency</globalPicklist>
        <label>Billing Currency</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EF_Billing_Frequency__c</fullName>
        <globalPicklist>EF_Frequency</globalPicklist>
        <label>Billing Frequency</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EF_Group_Code__c</fullName>
        <label>Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Location_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E&amp;F Location Currency</label>
        <referenceTo>EF_Location_Currency__c</referenceTo>
        <relationshipLabel>E&amp;F Approval Storages (E&amp;F Location Currency)</relationshipLabel>
        <relationshipName>EF_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EF_Material_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E&amp;F Material Line Item</label>
        <referenceTo>EF_Material_Line_Item__c</referenceTo>
        <relationshipLabel>E&amp;F Approval Storages</relationshipLabel>
        <relationshipName>EF_Approval_Storages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EF_Material_Name__c</fullName>
        <formula>EF_Material_Line_Item__r.EF_Material__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E&amp;F Material Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E&amp;F Material</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>E&amp;F Approval Storages</relationshipLabel>
        <relationshipName>EF_Approval_Storages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EF_Payment_Terms__c</fullName>
        <globalPicklist>EF_Payment_Terms</globalPicklist>
        <label>Payment Terms</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EF_Status__c</fullName>
        <globalPicklist>EF_Status</globalPicklist>
        <label>Status</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <label>Location Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Currency</label>
        <referenceTo>EF_Location_Currency__c</referenceTo>
        <relationshipName>EF_Approval_Temp_Storages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E&amp;F Location ID</label>
        <referenceTo>EF_Related_Records__c</referenceTo>
        <relationshipLabel>E&amp;F Approval Storages</relationshipLabel>
        <relationshipName>EF_Approval_Temp_Storages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Currency__c</fullName>
        <globalPicklist>EF_Currency</globalPicklist>
        <label>Payment Currency</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <globalPicklist>EF_Payment_Method</globalPicklist>
        <label>Payment Method</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Contract_Number__c</fullName>
        <label>SAP Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>E&amp;F Approval Storage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EFA-{0000000}</displayFormat>
        <label>E&amp;F Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>E&amp;F Approval Storages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>